mvp 3 | add api for working with documents; add KafkaTemplate
